# TSP_GPU

./: CMakeLists.txt
cmake_cpu/: CMakeLists.txt
cmake_gpu/: CMakeLists.txt
data/: dists_13_towns.txt  dists_5_towns.txt
data/test_data/: dists1.txt
src/: brute_force.cpp  brute_force.h  brute_force_gpu.cpp  brute_force_gpu.cu  main.cpp  optim_problem.h  tsp.cpp  tsp.h
test/: CMakeLists.txt  brute_force_test.cpp  tsp_test.cpp
